0.8.0
* feature: extension package loading (e.g. irbtools-more)
* feature: loading in IRB.conf[:IRB_RC] (loading when a subirb starts, no more guessmethod rails errors)
* added rerequire (rrq) and ld load helper

0.7.4
* added workaround to use irb_rocket and hirb at the same time (basic hack, e.g. paging does not work)
* fixed little VERSION bug

0.7.3
* refactored file structure and added new Irbtools.add_lib method
* load railsrc if executed with rails and Irbtools.railsrc is set
* more little fixes

0.7.2
* fixed Rails 3 bug
* added boson gem (command repository)
* remember history when resetting or switching ruby version

0.7.1
* added method for starting a debugger

0.7.0
* initial release

J-_-L